--- a/icecream.html
+++ b/icecream.html
@@ -33,27 +33,37 @@
 <body>
    <div class="header_section header_bg">
       <div class="container">
-         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.html"><img src="images/cafetaria-logo.png " style="width: 80px;
-  height: 80px;
-  object-fit: cover;
-  display: block;
-  padding: 0;
-  margin: 0;"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-               <span class="navbar-toggler-icon"></span>
-            </button>
+       <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="index.html"><img src="images/cafetaria-logo.png"
+                  style="width: 80px; height: 80px; object-fit: cover;"></a>
+
+            <div class="d-flex align-items-center order-lg-3">
+               <form class="form-inline my-2 my-lg-0">
+                  <svg id="cart-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                     class="bi bi-cart" viewBox="0 0 16 16" style="cursor: pointer;">
+                     <path
+                        d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
+                  </svg>
+               </form>
+
+               <button class="navbar-toggler ml-2" type="button" data-toggle="collapse"
+                  data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                  aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+               </button>
+            </div>
+
+
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                <ul class="navbar-nav ml-auto">
-                  <li class="nav-item ">
+                  <li class="nav-item">
                      <a class="nav-link" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
                      <a class="nav-link" href="about.html">About</a>
                   </li>
                   <li class="nav-item active">
-                     <a class="nav-link" href="icecream.html">Icecream</a>
+                     <a class="nav-link" href="icecream.html">Products</a>
                   </li>
                   <li class="nav-item">
                      <a class="nav-link" href="services.html">Services</a>
@@ -65,17 +75,6 @@
                      <a class="nav-link" href="contact.html">Contact Us</a>
                   </li>
                </ul>
-               <!-- Cart Icon -->
-               <form class="form-inline my-2 my-lg-0">
-                  <svg id="cart-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
-                     class="bi bi-cart" viewBox="0 0 16 16" style="cursor: pointer;">
-                     <path
-                        d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                  </svg>
-               </form>
-               <div id="cart" class="cart hidden">
-                  <ul id="cart-items"></ul>
-               </div>
             </div>
          </nav>
       </div>
@@ -86,15 +85,15 @@
       <div class="container">
          <div class="row">
             <div class="col-md-12">
-               <h1 class="cream_taital">Our Featured Ice Cream</h1>
-               <p class="cream_text">tempor incididunt ut labore et dolore magna aliqua</p>
+               <h1 class="cream_taital">Produk Pilihan Kami</h1>
+               <p class="cream_text"></p>
             </div>
          </div>
          <div class="cream_section_2">
             <div class="row">
                <div class="col-md-4">
                   <div class="cream_box">
-                     <div class="cream_img"><img style="height: 250px; width: 250px;" src="images/rice.png"></div>
+                     <div class="cream_img"><img class="img-fluid" src="images/rice.png" alt="rice bowl"></div>
                      <div class="price_text">13k</div>
                      <h6 class="strawberry_text">Rice Bowl</h6>
                      <div class="cart_bt"><a href="#">Add To Cart</a></div>
@@ -102,7 +101,7 @@
                </div>
                <div class="col-md-4">
                   <div class="cream_box">
-                     <div class="cream_img"><img style="height: 250px; width: 250px;" src="images/lumpia.png"></div>
+                     <div class="cream_img"><img class="img-fluid" src="images/lumpia.png" alt="lumpia"></div>
                      <div class="price_text">7K</div>
                      <h6 class="strawberry_text">Rolling Lumpia Beef</h6>
                      <div class="cart_bt"><a href="#">Add To Cart</a></div>
@@ -110,7 +109,7 @@
                </div>
                <div class="col-md-4">
                   <div class="cream_box">
-                     <div class="cream_img"><img style="height: 250px; width: 250px;" src="images/sempol.png"></div>
+                     <div class="cream_img"><img class="img-fluid" src="images/sempol.png" alt="sempol"></div>
                      <div class="price_text">5K</div>
                      <h6 class="strawberry_text">Sempol</h6>
                      <div class="cart_bt"><a href="#">Add To Cart</a></div>
@@ -118,7 +117,7 @@
                </div>
                <div class="col-md-4">
                   <div class="cream_box">
-                     <div class="cream_img"><img style="height: 250px; width: 250px;" src="images/kripca.png"></div>
+                     <div class="cream_img"><img class="img-fluid" src="images/kripca.png" alt="kaca keripiks"></div>
                      <div class="price_text">5K</div>
                      <h6 class="strawberry_text">Keripik Kaca</h6>
                      <div class="cart_bt"><a href="#">Add To Cart</a></div>
@@ -126,7 +125,7 @@
                </div>
                <div class="col-md-4">
                   <div class="cream_box">
-                     <div class="cream_img"><img style="height: 250px; width: 250px;" src="images/puding.png"></div>
+                     <div class="cream_img"><img class="img-fluid" src="images/puding.png" alt="pudding"></div>
                      <div class="price_text">5K</div>
                      <h6 class="strawberry_text">Pudding Vla</h6>
                      <div class="cart_bt"><a href="#">Add To Cart</a></div>
@@ -134,7 +133,7 @@
                </div>
                <div class="col-md-4">
                   <div class="cream_box">
-                     <div class="cream_img"><img style="height: 250px; width: 250px;" src="images/wawan_es.png"></div>
+                     <div class="cream_img"><img class="img-fluid" src="images/wawan_es.png" alt="es wawan"></div>
                      <div class="price_text">5K</div>
                      <h6 class="strawberry_text">Es Wawan</h6>
                      <div class="cart_bt"><a href="#">Add To Cart</a></div>
@@ -146,7 +145,7 @@
             <div class="row">
                <div class="col-md-4">
                   <div class="cream_box">
-                     <div class="cream_img"><img style="height: 250px; width: 250px;" src="images/buah.png"></div>
+                     <div class="cream_img"><img class="img-fluid" src="images/buah.png" alt="buah ptong"></div>
                      <div class="price_text">6K</div>
                      <h6 class="strawberry_text">Buah Potong Cup</h6>
                      <div class="cart_bt"><a href="#">Add To Cart</a></div>
@@ -154,7 +153,7 @@
                </div>
                <div class="col-md-4">
                   <div class="cream_box">
-                     <div class="cream_img"><img style="height: 250px; width: 250px;" src="images/jus.png"></div>
+                     <div class="cream_img"><img class="img-fluid" src="images/jus.png" alt="buah jus"></div>
                      <div class="price_text">8K</div>
                      <h6 class="strawberry_text">Jus Buah Segar</h6>
                      <div class="cart_bt"><a href="#">Add To Cart</a></div>
@@ -162,7 +161,7 @@
                </div>
                <div class="col-md-4">
                   <div class="cream_box">
-                     <div class="cream_img"><img style="height: 250px; width: 250px;" src="images/kopi.png"></div>
+                     <div class="cream_img"><img class="img-fluid" src="images/kopi.png" alt="kopi"></div>
                      <div class="price_text">10K</div>
                      <h6 class="strawberry_text">Coffee</h6>
                      <div class="cart_bt"><a href="#">Add To Cart</a></div>
@@ -170,7 +169,7 @@
                </div>
                <div class="col-md-4">
                   <div class="cream_box">
-                     <div class="cream_img"><img style="height: 250px; width: 500px;" src="images/bbeng.png"></div>
+                     <div class="cream_img"><img class="img-fluid" src="images/bbeng.png" alt="bbng share"></div>
                      <div class="price_text">2k</div>
                      <h6 class="strawberry_text">Beng-Beng</h6>
                      <div class="cart_bt"><a href="#">Add To Cart</a></div>
@@ -178,7 +177,7 @@
                </div>
                <div class="col-md-4">
                   <div class="cream_box">
-                     <div class="cream_img"><img style="height: 250px; width: 500px;" src="images/bbeng_maxx.png"></div>
+                     <div class="cream_img"><img src="images/bbeng_maxx.png" class="img-fluid" alt="bbng mex"></div>
                      <div class="price_text">3k</div>
                      <h6 class="strawberry_text">Beng-Beng Maxx</h6>
                      <div class="cart_bt"><a href="#">Add To Cart</a></div>
@@ -186,7 +185,7 @@
                </div>
                <div class="col-md-4">
                   <div class="cream_box">
-                     <div class="cream_img"><img style="height: 250px; width: 500px;" src="images/nabati.png"></div>
+                     <div class="cream_img"><img class="img-fluid" src="images/nabati.png" alt="nabati"></div>
                      <div class="price_text">2k</div>
                      <h6 class="strawberry_text">Nabati</h6>
                      <div class="cart_bt"><a href="#">Add To Cart</a></div>
@@ -215,7 +214,9 @@
    <!-- sidebar -->
    <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
    <script src="js/custom.js"></script>
+   <script src="js/penjualan-cart.js"></script>
    <!-- javascript -->
+
 </body>
 
 </html>
