--- a/blog.html
+++ b/blog.html
@@ -34,16 +34,24 @@
    <div class="header_section header_bg">
       <div class="container">
          <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.html"><img src="images/cafetaria-logo.png " style="width: 80px;
-  height: 80px;
-  object-fit: cover;
-  display: block;
-  padding: 0;
-  margin: 0;"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-               <span class="navbar-toggler-icon"></span>
-            </button>
+            <a class="navbar-brand" href="index.html"><img src="images/cafetaria-logo.png"
+                  style="width: 80px; height: 80px; object-fit: cover;"></a>
+
+            <div class="d-flex align-items-center order-lg-3">
+               <form class="form-inline my-2 my-lg-0">
+                  <svg id="cart-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                     class="bi bi-cart" viewBox="0 0 16 16" style="cursor: pointer;">
+                     <path
+                        d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
+                  </svg>
+               </form>
+
+               <button class="navbar-toggler ml-2" type="button" data-toggle="collapse"
+                  data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                  aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+               </button>
+            </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                <ul class="navbar-nav ml-auto">
                   <li class="nav-item">
@@ -53,7 +61,7 @@
                      <a class="nav-link" href="about.html">About</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="icecream.html">Icecream</a>
+                     <a class="nav-link" href="icecream.html">Products</a>
                   </li>
                   <li class="nav-item">
                      <a class="nav-link" href="services.html">Services</a>
@@ -65,17 +73,6 @@
                      <a class="nav-link" href="contact.html">Contact Us</a>
                   </li>
                </ul>
-               <!-- Cart Icon -->
-               <form class="form-inline my-2 my-lg-0">
-                  <svg id="cart-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
-                     class="bi bi-cart" viewBox="0 0 16 16" style="cursor: pointer;">
-                     <path
-                        d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2" />
-                  </svg>
-               </form>
-               <div id="cart" class="cart hidden">
-                  <ul id="cart-items"></ul>
-               </div>
             </div>
          </nav>
       </div>
@@ -95,28 +92,46 @@
                   <div class="testimonial_box">
                      <div id="main_slider" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
+                           <div class="carousel-item">
+                              <p class="testimonial_text">tempor incididunt ut labore et dolore magna aliqua. Ut enim
+                                 ad
+                                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                                 commodo
+                                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                                 dolore
+                                 eu fugiat nulla pariatur. Excepteur sint</p>
+                              <h4 class="client_name">Firda</h4>
+                              <div class="client_img"><img src="images/client-img.png"></div>
+                           </div>
                            <div class="carousel-item active">
-                              <p class="testimonial_text">tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                              <p class="testimonial_text">tempor incididunt ut labore et dolore magna aliqua. Ut enim
+                                 ad
+                                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                                 commodo
+                                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                                 dolore
                                  eu fugiat nulla pariatur. Excepteur sint</p>
-                              <h4 class="client_name">Marri Fen</h4>
+                              <h4 class="client_name">Mas Refangga</h4>
                               <div class="client_img"><img src="images/client-img.png"></div>
                            </div>
                            <div class="carousel-item">
-                              <p class="testimonial_text">tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                              <p class="testimonial_text">tempor incididunt ut labore et dolore magna aliqua. Ut enim
+                                 ad
+                                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                                 commodo
+                                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                                 dolore
                                  eu fugiat nulla pariatur. Excepteur sint</p>
-                              <h4 class="client_name">Marri Fen</h4>
+                              <h4 class="client_name">M. Varrel</h4>
                               <div class="client_img"><img src="images/client-img.png"></div>
                            </div>
                            <div class="carousel-item">
-                              <p class="testimonial_text">tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
-                                 eu fugiat nulla pariatur. Excepteur sint</p>
-                              <h4 class="client_name">Marri Fen</h4>
+                              <p class="testimonial_text">pelayanan oke banget meski rame tapi disini atreannya rapi
+                                 kondusif
+                                 gada nyelak atrean. makanan yang dijual juga beragam dan enak lagi, kalau aku suka es
+                                 wawan sih seger
+                              </p>
+                              <h4 class="client_name">Teguh Darah</h4>
                               <div class="client_img"><img src="images/client-img.png"></div>
                            </div>
                         </div>
@@ -135,7 +150,7 @@
    </div>
    <!-- testimonial section end -->
    <!-- copyright section start -->
-  <div class="copyright_section">
+   <div class="copyright_section">
       <div class="container">
          <p class="copyright_text">© 2025 Kelompok Cafetaria. Desain oleh Cafetaria team.
             </a></p>
@@ -148,6 +163,7 @@
    <script src="js/bootstrap.bundle.min.js"></script>
    <script src="js/jquery-3.0.0.min.js"></script>
    <script src="js/plugin.js"></script>
+   <script src="js/penjualan-cart.js"></script>
    <!-- sidebar -->
    <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
    <script src="js/custom.js"></script>
