blog + css( refangga )

--- a/blog.html
+++ b/blog.html
@@ -93,48 +93,41 @@
                      <div id="main_slider" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                            <div class="carousel-item">
-                              <p class="testimonial_text">tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                                 ad
-                                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                                 commodo
-                                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                                 dolore
-                                 eu fugiat nulla pariatur. Excepteur sint</p>
-                              <h4 class="client_name">Firda</h4>
-                              <div class="client_img"><img src="images/client-img.png"></div>
+                              <p class="testimonial_text">Kantin UKKM sekarang makin keren!🍛✨
+                                 Selain makanannya yang enak dan harganya terjangkau, sistem pemesanannya juga udah serba digital.
+                                 Saya biasanya harus antre lama, apalagi pas jam istirahat, tapi sejak ada aplikasi web-nya, tinggal pesan dari HP, terus tinggal ambil.
+                                 Efisien banget, apalagi buat mahasiswa yang jadwalnya padat. 
+                                 Pelayanannya juga tetap ramah meskipun sekarang lebih modern. Salut buat inovasinya!"</p>
+                              <h4 class="client_name">Mbk Firda</h4>
+                              <div class="client_img"><img src="images/nisrina_firdaus.jpg"></div>
                            </div>
                            <div class="carousel-item active">
-                              <p class="testimonial_text">tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                                 ad
-                                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                                 commodo
-                                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                                 dolore
-                                 eu fugiat nulla pariatur. Excepteur sint</p>
+                              <p class="testimonial_text">"Kantin Cafetaria ini juara bangeett! 🍛✨
+                                 Makanannya enak-enak, harganya ramah di kantong mahasiswa, dan pelayanannya cepet bngtt!
+                                 Sekarang juga ada sistem PO nya, jadi bisa pesan duluan dan tinggal ambil pas udah siap, praktis bngt pokoknyaa!
+                                 Plus, sistem pesan online nya bikin makin nyaman, nggak perlu ngantri lama.
+                                 Top banget pokoknya, sukses terus buat kantinnya!"</p>
                               <h4 class="client_name">Mas Refangga</h4>
-                              <div class="client_img"><img src="images/client-img.png"></div>
+                              <div class="client_img"><img src="images/Refangga_Ardiansah.jpg"></div>
                            </div>
                            <div class="carousel-item">
-                              <p class="testimonial_text">tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                                 ad
-                                 minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                                 commodo
-                                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                                 dolore
-                                 eu fugiat nulla pariatur. Excepteur sint</p>
+                              <p class="testimonial_text">Sebagai mahasiswa baru, awalnya saya sempat bingung cari tempat makan yang enak dan praktis di kampus.
+                                 Tapi setelah coba UKKM Cafetaria, wah... langsung cocok! 🍛✨ 
+                                 Pesannya gampang banget karena udah digital, tinggal buka aplikasinya, pilih menu, terus tinggal ambil pas udah siap. Nggak perlu desak-desakan atau antre panjang kayak di kantin lain.
+                                 Harganya juga bersahabat buat anak kos. Keren banget sih!</p>
                               <h4 class="client_name">M. Varrel</h4>
-                              <div class="client_img"><img src="images/client-img.png"></div>
+                              <div class="client_img"><img src="images/varrel.jpg"></div>
                            </div>
                            <div class="carousel-item">
-                              <p class="testimonial_text">pelayanan oke banget meski rame tapi disini atreannya rapi
+                              <p class="testimonial_text">pelayanan oke banget meski rame tapi disini antreannya rapi
                                  kondusif
-                                 gada nyelak atrean. makanan yang dijual juga beragam dan enak lagi, kalau aku suka es
+                                 gada nyelak antrean. makanan yang dijual juga beragam dan enak lagi, kalau aku suka es
                                  wawan sih seger
                               </p>
                               <h4 class="client_name">Teguh Darah</h4>
-                              <div class="client_img"><img src="images/client-img.png"></div>
+                              <div class="client_img"><img src="images/teguh_januar.jpg"></div>
                            </div>
-                        </div>
+                        </div>
                         <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
                            <i class="fa fa-angle-left"></i>
                         </a>
